# homebrew-ggai

./: README.md  ggai.rb  pyproject.toml
src/ggai/: __init__.py  main.py
