[project]
name = "ggai"
version = "0.4.18"
description = "Helper for GeoGuessr training using OpenAI"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
authors = [
    { name = "Rio Fujita", email = "rifujita@microsoft.com" }
]
requires-python = ">=3.10"
dependencies = [
    "openai>=2.8.0",
    "pillow>=12.0.0",
    "pyobjc>=12.0",
]

[project.scripts]
ggai = "ggai.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/rioriost/homebrew-ggai"
Issues = "https://github.com/rioriost/homebrew-ggai/issues"
