[project]
name = "ggai"
version = "0.4.27"
description = "Helper for GeoGuessr training using OpenAI"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
authors = [
    { name = "Rio Fujita", email = "rifujita@microsoft.com" }
]
requires-python = ">=3.13"
dependencies = [
    "openai>=2.17.0",
    "pillow>=12.1.0",
    "pyobjc>=12.1",
]

[project.scripts]
ggai = "ggai.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = ["__pycache__", "*.rb", "uv.lock", "dist/.DS_Store", ".envrc"]

[project.urls]
Homepage = "https://github.com/rioriost/homebrew-ggai"
Issues = "https://github.com/rioriost/homebrew-ggai/issues"
